added H2 db and populated it, closes #6

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.jpa.hibernate.ddl.auto=create-drop
-spring.datasource.url=jdbc:postgresql://localhost:5432/test?currentSchema=crud
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+#spring.jpa.hibernate.ddl.auto=create-drop
+#spring.datasource.url=jdbc:postgresql://localhost:5432/test?currentSchema=crud
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 #logging.level.org.springframework=debug
+
+spring.h2.console.enabled=true
